SFDCProject/src/objects/Array_Information__c.object
<CustomObject>
    <fields>
        <fullName>AC_DC_derate_factor__c</fullName>
        <label>AC DC derate factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Solar_Access__c</fullName>
        <label>Annual Solar Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>April_Shade__c</fullName>
        <label>April Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_Number__c</fullName>
        <label>Array Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Shade__c</fullName>
        <label>August Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEC_AC_Rating__c</fullName>
        <label>CEC AC Rating</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Shade__c</fullName>
        <label>December Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>East__c</fullName>
        <label>East</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>February_Shade__c</fullName>
        <label>February Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Mount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Efficiency__c</fullName>
        <inlineHelpText>For NEM Drawloop generation. (Order Management)</inlineHelpText>
        <label>Inverter Efficiency</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Name_Plate__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Inverter Name Plate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Rating__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Inverter Rating</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>January_Shade__c</fullName>
        <label>January Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July_Shade__c</fullName>
        <label>July Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June_Shade__c</fullName>
        <label>June Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>March_Shade__c</fullName>
        <label>March Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_Shade__c</fullName>
        <label>May Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mounting_Method__c</fullName>
        <label>Mounting Method</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Plate_Capacity__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <formula>IF( Proposal__r.Opportunity__r.Account.ShippingState = &quot;HI&quot;, Panel_PTC_Rating__c * Proposal__r.Total_No_Panels__c ,  Proposal__r.Panel_Name_Plate__c  * Proposal__r.Total_No_Panels__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Name Plate Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_30__c</fullName>
        <label>-30°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_60__c</fullName>
        <label>-60°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>November_Shade__c</fullName>
        <label>November Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Inverters__c</fullName>
        <label>Number of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <label>Number of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Shade__c</fullName>
        <label>October Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Panel_PTC_Rating__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Panel PTC Rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_30__c</fullName>
        <label>30°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_60__c</fullName>
        <label>60°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Array Information</relationshipLabel>
        <relationshipName>Array_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>September_Shade__c</fullName>
        <label>September Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Array Information</relationshipLabel>
        <relationshipName>Array_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>South__c</fullName>
        <label>South</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>West__c</fullName>
        <label>West</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Array Information</label>
    <nameField>
        <label>Array Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Array Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>